--- a/pizza-app/package.json
+++ b/pizza-app/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -34,7 +32,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
     "react-redux": "^7.2.0",
+    "react-test-render": "^1.1.2",
+    "react-test-renderer": "^16.13.0",
     "redux": "^4.0.5"
   }
 }
