--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,10 @@
     ]
   },
   "devDependencies": {
+    "check-prop-types": "^1.1.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest-enzyme": "^7.1.2",
     "react-test-renderer": "^16.13.0"
   }
 }
